--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -9,6 +9,9 @@
   <link rel="preload" href="fonts/HeraclitoMedium.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/HeraclitoSemiBold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/HeraclitoLight.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
   <script defer src="js/main.js"></script>
