--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,4 +6,10 @@
 @import "./mixins/mini";
 @import "./mixins/tabs";
 @import "./mixins/disable-mob-hover";
+
+
+@import "./mixins/buttons";
+
+
 @import "./mixins/layout";
+
