--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -21,8 +21,7 @@ $white: #ffffff;
 
 //FONTS FAMILY
 $font_Heraclito:"Heraclito", sans-serif;
+$font_lato: "Lato", sans-serif;
 
-//
-$test:#adc
-   
+
  
