--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,4 +1,4 @@
-@import "./vendor/normalize";
+@import "./vendor/reset";
 
 // стили для модального окна
 // @import "../../node_modules/graph-modal/dist/graph-modal.min"
