--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -12,7 +12,8 @@ html {
 
 .body {
   height: 100%;
-  font-family: var(--font-family, sans-serif);
+  //font-family: var(--font-family, sans-serif);//
+  font-family: "Lato", sans-serif;
   font-size: 16px;
 }
 
@@ -65,4 +66,8 @@ input {
   border: none;
   border-radius: 0;
   background-color: #fff;
+}
+
+.main {
+  background: url(../img/main-bg.png) cover/center;
 }
