--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,12 +6,7 @@
 
 // подключения компонентов страницы
 @import "./components/header";
+@import "./components/banner";
+@import "./components/service";
 
-
-
-.main-h2 {
-  color: 6rem;
-  font-size: 3rem;
-  font-family: $font_Heraclito;
-  font-weight: 200;
-}
+ 
