made tablette version

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,99 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="footer__form">
+    <div class="container">
+      <div class="footer__form-content">
+        <form action="" class="footer__form-group">
+          <div class="footer__form-control">
+            <input type="text" class="footer__form-input" placeholder="Имя Фамилия">
+          </div>
+          <div class="footer__form-control">
+            <input type="text" class="footer__form-input" placeholder="Телефон">
+          </div>
+          <label for="ok" class="footer__form-label">
+            <input type="checkbox" id="ok">
+            <span class="footer__form-box"></span>
+            <span>Я принимаю условия <span style="color:#f2f2f2;">Политики конфиденциальности</span></span>
+          </label>
+          <button class="footer__form-submit">Оставить заявку на обучение</button>
+        </form>
+        <div class="footer__form-address">
+          <p class="footer__form-phone">+7 (495) 181-18-02</p>
+          <p class="footer__form-location">Москва, ул. Остоженка 25</p>
+          <p class="footer__form-location">метро Парк культуры</p>
+          <button class="footer__form-btn">
+            <span>Смотреть на карте</span>
+            <svg class="banner__icon">
+              <use xlink:href="img/sprite.svg#array-up"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer__main-content">
+    <div class="container">
+      <div class="footer__inner-top">
+        <a href="footer__logo-link">
+          <img src="img/svg/logo-footer.svg" alt="logo" class="footer__logo">
+        </a>
+        <nav class="footer__nav">
+          <a href="" class="footer__nav-link">О курсе</a>
+          <a href="" class="footer__nav-link">Отзывы</a>
+          <a href="" class="footer__nav-link">О преподавателе</a>
+          <a href="" class="footer__nav-link">Блог</a>
+          <a href="" class="footer__nav-link">Портфолио</a>
+          <a href="" class="footer__nav-link">Контакты</a>
+        </nav>
+        <div class="footer__social">
+          <a href="#" class="footer__social-link">
+           <img src="img/whatsapp.png" alt="" class="footer__social-img">
+          </a>
+          <a href="#" class="footer__social-link">
+            <img src="img/telegram.png" alt="" class="footer__social-img">
+          </a>
+          <a href="#" class="footer__social-link">
+            <img src="img/instagram.png" alt="" class="footer__social-img">
+          </a>
+          <a href="#" class="footer__social-link">
+            <img src="img/youtube.png" alt="" class="footer__social-img">
+          </a>
+        </div>
+        <!-- <div class="footer__social">
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon">
+              <use xlink:href="img/sprite.svg#whatsapps"></use>
+            </svg>
+          </a>
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon">
+              <use xlink:href="img/sprite.svg#telegram"></use>
+            </svg>
+          </a>
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon">
+              <use xlink:href="img/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+          <a href="#" class="footer__social-link">
+            <svg class="footer__social-icon">
+              <use xlink:href="img/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+        </div> -->
+      </div>
+      <div class="footer__bottom">
+        <div class="footer__copy-right">© Copyright 2018 — 2023 HAIR&SKIN Innovation institute</div>
+        <div class="footer__bottom-list">
+          <p>
+            <span>Обработка персональных данных</span>
+          </p>
+          <p>
+            <span>Лицензии и документы</span>
+          </p>
+        </div>
+        <a href="#" class="footer__author">Made by <span>Grokhotov</span></a>
+      </div>
+      <p class="footer__meta">Instagram (принадлежит Meta, признанной экстремистской и запрещенной в России)</p>
+    </div>
+  </div>
 </footer>
