--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,5 +8,6 @@
 @import "./components/header";
 @import "./components/banner";
 @import "./components/service";
+@import "./components/footer";
 
  
