--- a/src/scss/mixins/_buttons.scss
+++ b/src/scss/mixins/_buttons.scss
@@ -39,6 +39,7 @@
   text-transform: uppercase;
   font-family: $font_Heraclito;
   font-weight: 600;
+  fill: $main_blue;
  
   &:hover {
     color: #19768B;
