--- a/app/css/main.css
+++ b/app/css/main.css
@@ -89,6 +89,12 @@ html {
   margin: 0 auto;
   overflow: hidden;
 }
+@media screen and (min-width: 768px) {
+  .container {
+    padding-left: 38px;
+    padding-right: 38px;
+  }
+}
 
 .page {
   margin: 0 auto;
@@ -302,6 +308,16 @@ input {
 .banner {
   margin-top: 30px;
 }
+@media screen and (min-width: 768px) {
+  .banner {
+    margin-top: 58px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner {
+    margin-top: 70px;
+  }
+}
 .banner__title {
   font-family: "Heraclito", sans-serif;
   font-weight: 500;
@@ -309,6 +325,23 @@ input {
   line-height: 100%;
   color: #1F93AE;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .banner__title {
+    font-size: 90px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner__title {
+    font-size: 140px;
+    line-height: 140px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .banner__title {
+    font-size: 160px;
+    line-height: 100%;
+  }
 }
 .banner__description {
   font-weight: 400;
@@ -321,6 +354,22 @@ input {
 .banner__description--center {
   text-align: center;
   margin-bottom: 80px;
+}
+@media screen and (min-width: 768px) {
+  .banner__description--center {
+    width: 536px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner__description--center {
+    width: 948px;
+    margin-bottom: 120px;
+    font-size: 24px;
+    line-height: 130%;
+  }
 }
 .banner__description span {
   display: inline-block;
@@ -370,6 +419,12 @@ input {
   .banner__picture {
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .banner__picture {
+    margin-bottom: 40px;
   }
 }
 .banner__img {
@@ -395,6 +450,29 @@ input {
   text-transform: uppercase;
   color: #7A7979;
 }
+@media screen and (min-width: 768px) {
+  .service__top {
+    margin-top: 120px;
+  }
+}
+.service__top--light {
+  margin-top: 0;
+}
+@media screen and (min-width: 768px) {
+  .service__edge {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 12px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .service__box {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+}
 .service__description {
   font-family: "Heraclito", sans-serif;
   font-weight: 500;
@@ -403,11 +481,30 @@ input {
   color: #ffffff;
   margin-top: 30px;
 }
+@media screen and (min-width: 768px) {
+  .service__description {
+    margin-top: 40px;
+  }
+}
 .service__description--medium {
   font-size: 20px;
   line-height: 130%;
 }
+@media screen and (min-width: 768px) {
+  .service__description--medium {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+}
 .service__description--course {
+  font-family: "Heraclito";
+  font-size: 20px;
+  line-height: 130%;
+  color: #303030;
+  margin-bottom: 5px;
+}
+.service__description--clinic {
   font-family: "Heraclito";
   font-size: 20px;
   line-height: 130%;
@@ -421,12 +518,28 @@ input {
 .service__slider {
   margin-top: 40px;
 }
+@media screen and (min-width: 768px) {
+  .service__cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 12px;
+  }
+}
 .service__card {
   background: #ffffff;
   padding: 25px 20px;
   min-height: 356px;
   margin-bottom: 25px;
   font-family: "Lato", sans-serif;
+}
+@media screen and (min-width: 768px) {
+  .service__card {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    margin-bottom: 30px;
+  }
 }
 .service__card-title {
   font-weight: 400;
@@ -499,6 +612,33 @@ input {
   padding-left: 10px;
   padding-right: 10px;
 }
+@media screen and (min-width: 768px) {
+  .service__item--light {
+    padding-top: 100px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .service__wrap-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media screen and (min-width: 768px) {
+  .service__wrap-item-desc {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 320px;
+    flex: 0 0 320px;
+    margin-right: 33px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .service__wrap-item-portrait {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+}
 .service__box {
   margin-top: 42px;
   margin-bottom: 65px;
@@ -540,7 +680,7 @@ input {
   line-height: 110%;
   color: #1F93AE;
   margin-top: 30px;
-  margin-bottom: 25px;
+  padding-bottom: 25px;
 }
 .service__text-info {
   font-family: "Lato", sans-serif;
@@ -576,6 +716,7 @@ input {
   text-transform: uppercase;
   font-family: "Heraclito", sans-serif;
   font-weight: 600;
+  fill: #1F93AE;
   height: 50px;
   line-height: 46px;
   width: 100%;
@@ -595,6 +736,17 @@ input {
   color: #62B3C6;
   border-color: #62B3C6;
   fill: #62B3C6;
+}
+.service__btn-course--practice {
+  margin-bottom: 0;
+}
+.service__bg-hair-skin {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .service__bg-hair-skin {
+    display: block;
+  }
 }
 .service__text-slide {
   height: 60px;
@@ -630,5 +782,531 @@ input {
 .service__btn-info:active {
   color: #62B3C6;
   fill: #62B3C6;
+}
+.service__btn-info--review {
+  color: #1F93AE;
+  fill: #1F93AE;
+  float: right;
+  cursor: pointer;
+}
+.service__schedule {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 18px;
+}
+.service__schedule-card {
+  background: #FFFFFF;
+  -webkit-box-shadow: 3px 4px 25px rgba(0, 0, 0, 0.07);
+  box-shadow: 3px 4px 25px rgba(0, 0, 0, 0.07);
+  padding: 25px 21px;
+}
+.service__schedule-date {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  color: #1F93AE;
+  margin-bottom: 7px;
+}
+.service__schedule-hour {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #008CAD;
+}
+.service__schedule-list--pratice {
+  padding-left: 10px;
+}
+.service__schedule-list-step {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  color: #7A7979;
+  position: relative;
+  margin-bottom: 5px;
+}
+.service__schedule-list-step::before {
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  background-color: #7A7979;
+  position: absolute;
+  left: -12px;
+  top: 8px;
+}
+.service__schedule-btn {
+  color: #1F93AE;
+  -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: "Heraclito", sans-serif;
+  font-weight: 500;
+  border-bottom: 1px solid #1F93AE;
+  margin-top: 18px;
+}
+.service__schedule-btn:hover {
+  color: #19768B;
+  border-bottom-color: #19768B;
+}
+.service__schedule-btn:focus {
+  color: #145E6F;
+  border-bottom-color: #145E6F;
+}
+.service__schedule-btn:active {
+  color: #62B3C6;
+  border-bottom-color: #62B3C6;
+}
+.service__schedule-video {
+  height: 180px;
+  border: 1px solid;
+  margin-top: 30px;
+}
+.service__schedule-image {
+  margin-top: 30px;
+  display: block;
+  width: 100%;
+}
+.service__step-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+.service__step-card-img {
+  display: block;
+  width: 100%;
+}
+.service__step-card-text {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #212020;
+  margin-top: 15px;
+}
+.service__card-slide-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 14.5px;
+}
+.service__card-slide-avatar {
+  width: 41px;
+  height: 41px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-radius: 100%;
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  font-size: 16.4139px;
+  text-transform: uppercase;
+  color: #F1F3F9;
+  background: #006D84;
+  margin-right: 16px;
+}
+.service__card-slide-name {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  color: #333333;
+}
+.service__card-slide-status {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #BDBDBD;
+}
+.service__card-slide-text {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #333333;
+  margin-bottom: 15px;
+}
+.service__card-slide-btn {
+  color: #1F93AE;
+  -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: "Heraclito", sans-serif;
+  font-weight: 500;
+  border-bottom: 1px solid #1F93AE;
+}
+.service__card-slide-btn:hover {
+  color: #19768B;
+  border-bottom-color: #19768B;
+}
+.service__card-slide-btn:focus {
+  color: #145E6F;
+  border-bottom-color: #145E6F;
+}
+.service__card-slide-btn:active {
+  color: #62B3C6;
+  border-bottom-color: #62B3C6;
+}
+.service__blog {
+  margin-top: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 15px;
+  padding-bottom: 80px;
+}
+.service__blog-item {
+  position: relative;
+  height: 325px;
+}
+.service__blog-img {
+  display: block;
+  width: 100%;
+  height: 190px;
+}
+.service__blog-body {
+  background: #FFFFFF;
+  -webkit-box-shadow: 3px 4px 25px rgba(0, 0, 0, 0.07);
+  box-shadow: 3px 4px 25px rgba(0, 0, 0, 0.07);
+  border-radius: 8px;
+  padding: 20px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.service__blog-title {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  color: #1F93AE;
+  margin-bottom: 12px;
+}
+.service__blog-text {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #939393;
+  margin-bottom: 15px;
+}
+.service__blog-footer {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  color: #1F93AE;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.service__blog-date {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #6F6F6F;
+}
+
+.footer__form {
+  background: #181818;
+  border-radius: 15px;
+  padding-top: 62px;
+  padding-bottom: 62px;
+}
+.footer__form-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 60px;
+}
+.footer__form-input {
+  padding: 19px 20px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #9B9B9B;
+  display: block;
+  width: 100%;
+  background: #181818;
+  border-bottom: 1px solid #F2F2F2;
+  border-radius: 13px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.footer__form-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  color: #9B9B9B;
+  margin-top: 20px;
+  margin-bottom: 33px;
+}
+.footer__form-label input {
+  display: none;
+}
+.footer__form-label input:checked ~ .footer__form-box {
+  background-color: #F2F2F2;
+}
+.footer__form-box {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 20px;
+  flex: 0 0 20px;
+  height: 20px;
+  border: 1px solid #F2F2F2;
+  border-radius: 4px;
+  display: inline-block;
+  margin-right: 9px;
+}
+.footer__form-submit {
+  background-color: #1F93AE;
+  color: #ffffff;
+  border-radius: 12px;
+  -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: "Heraclito", sans-serif;
+  font-weight: 600;
+  height: 50px;
+  width: 100%;
+}
+.footer__form-submit:hover {
+  background-color: #19768B;
+}
+.footer__form-submit:focus {
+  background-color: #145E6F;
+}
+.footer__form-submit:active {
+  background-color: #62B3C6;
+}
+.footer__form-address {
+  font-family: "Heraclito", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+  color: #F2F2F2;
+}
+.footer__form-phone {
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+.footer__form-btn {
+  color: #000000;
+  -webkit-transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-family: "Heraclito", sans-serif;
+  font-weight: 600;
+  color: #1F93AE;
+  fill: #1F93AE;
+  margin-top: 42px;
+}
+.footer__form-btn:hover {
+  color: #19768B;
+  fill: #19768B;
+}
+.footer__form-btn:focus {
+  color: #145E6F;
+  fill: #145E6F;
+}
+.footer__form-btn:active {
+  color: #62B3C6;
+  fill: #62B3C6;
+}
+.footer__main-content {
+  margin-top: 32px;
+}
+.footer__inner-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 30px;
+  border-bottom: 1px solid #BDBDBD;
+  padding-bottom: 24px;
+}
+.footer__logo {
+  width: 236px;
+  height: 59px;
+}
+.footer__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  row-gap: 15px;
+}
+.footer__nav-link {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #181818;
+  width: 47%;
+}
+.footer__social-img {
+  width: 34px;
+  height: 34px;
+  margin-right: 8px;
+}
+.footer__bottom {
+  margin-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #BDBDBD;
+}
+.footer__copy-right {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #4A4A4A;
+  opacity: 0.5;
+  margin-bottom: 15px;
+}
+.footer__bottom-list {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 10px;
+  color: #181818;
+  opacity: 0.5;
+  margin-bottom: 20px;
+}
+.footer__bottom-list span {
+  display: inline-block;
+  border-bottom: 1px solid #181818;
+}
+.footer__author {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 140%;
+  color: #6F6F6F;
+}
+.footer__author span {
+  color: #333333;
+}
+.footer__author span::after {
+  content: "";
+  display: inline-block;
+  width: 4.2px;
+  height: 4.2px;
+  border-radius: 100%;
+  margin-left: 4px;
+  background: #E72144;
+}
+.footer__meta {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 100%;
+  color: #CACACA;
+  margin-top: 5px;
+  margin-bottom: 21px;
 }
 /*# sourceMappingURL=main.css.map */
