--- a/src/scss/components/_service.scss
+++ b/src/scss/components/_service.scss
@@ -15,14 +15,24 @@
     line-height: 100%;
     text-transform: uppercase;
     color:$grey;
+    @media screen  and (min-width: 768px) {
+      margin-top: 120px;
+    }
     &--light {
-     
+     margin-top: 0;
     }
   }
-  // &__edge {
-  //   padding-top: 42px;
-  //   padding-bottom: 65px;
-  // }
+  &__edge {
+    @media screen  and (min-width: 768px) {
+      display: flex;
+      gap: 12px;
+    }
+  }
+  &__box {
+    @media screen  and (min-width: 768px) {
+      flex: 1;
+    }
+  }
   &__description {
     font-family: $font_Heraclito;
     font-weight: 500;
@@ -30,11 +40,25 @@
     line-height: 110%;
     color:$white;
     margin-top: 30px;
+    @media screen  and (min-width: 768px) {
+      margin-top: 40px;
+    }
     &--medium {
       font-size: 20px;
       line-height: 130%;
+      @media screen  and (min-width: 768px) {
+        flex: 1;
+      }
     }
     &--course {
+      font-family: 'Heraclito';
+      font-size: 20px;
+      line-height: 130%;
+      color: #303030;
+      margin-bottom: 5px;
+      
+    }
+    &--clinic {
       font-family: 'Heraclito';
       font-size: 20px;
       line-height: 130%;
@@ -51,6 +75,10 @@
   }
   &__cards {
     
+    @media screen  and (min-width: 768px) {
+      display: flex;
+      gap: 12px;
+    }
   }
   &__card {
     background: $white;
@@ -58,6 +86,10 @@
     min-height: 356px;
     margin-bottom: 25px;
     font-family: $font_lato;
+    @media screen  and (min-width: 768px) {
+      flex: 1;
+      margin-bottom: 30px;
+    }
   }
   &__card-title {
     font-weight: 400;
@@ -133,7 +165,27 @@
       margin-right: -10px;
       padding-left: 10px;
       padding-right: 10px;
+      @media screen  and (min-width: 768px) {
+        padding-top: 100px;
+      }
       
+    }
+  }
+  &__wrap-item {
+
+    @media screen  and (min-width: 768px) {
+      display: flex;
+    }
+  }
+  &__wrap-item-desc {
+    @media screen  and (min-width: 768px) {
+      flex: 0 0 320px;
+      margin-right: 33px;
+    }
+  }
+  &__wrap-item-portrait {
+    @media screen  and (min-width: 768px) {
+      flex: 1;
     }
   }
   &__box {
@@ -179,7 +231,8 @@
     line-height: 110%;
     color: $main_blue;
     margin-top: 30px;
-    margin-bottom: 25px;
+    //margin-bottom: 25px;
+    padding-bottom: 25px;
 
   }
   &__text-info {
@@ -202,6 +255,16 @@
     line-height: 46px;
     width: 100%;
     margin-bottom: 30px;
+    &--practice {
+      margin-bottom: 0;
+    }
+  }
+  &__bg-hair-skin {
+    display: none;
+    @media screen  and (min-width: 768px) {
+      display: block;
+    }
+
   }
   &__text-slide {
     height: 60px;
@@ -211,5 +274,209 @@
   }
   &__btn-info {
     @include text-button;
+
+    &--review {
+      color: $main_blue;
+      fill: $main_blue;
+      float: right;
+      cursor: pointer;
+    }
+  }
+  &__schedule {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+  }
+  &__schedule-card {
+    background: #FFFFFF;
+    box-shadow: 3px 4px 25px rgba(0, 0, 0, 0.07);
+    padding: 25px 21px;
+    //margin-bottom: 18px;
+  }
+  &__schedule-date {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 140%;
+    color: $main_blue;
+    margin-bottom: 7px;
+  }
+  &__schedule-hour {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #008CAD;
+  }
+  &__schedule-list {
+
+    &--pratice {
+      padding-left: 10px;
+    }
+  }
+  &__schedule-list-step {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+    color: #7A7979;
+    position: relative;
+    margin-bottom: 5px;
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 6px;
+      height: 6px;
+      border-radius: 100%;
+      background-color: #7A7979;
+      position: absolute;
+      left: -12px;
+      top: 8px;
+    }
+  }
+  &__schedule-btn {
+    @include link-button;
+    margin-top: 18px;
+  }
+  &__schedule-video {
+    height: 180px;
+    border: 1px solid;
+    margin-top: 30px;
+  }
+  &__schedule-image {
+    margin-top: 30px;
+    display: block;
+    width: 100%;
+  }
+  &__step-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+  }
+  &__step-card-item {
+
+  }
+  &__step-card-img {
+    display: block;
+    width: 100%;
+  }
+  &__step-card-text {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: $black;
+    margin-top: 15px;
+  }
+  &__card-slide-inner {
+
+  }
+  &__card-slide-head {
+    display: flex;
+    align-items: center;
+    margin-bottom: 14.5px;
+  }
+  &__card-slide-avatar {
+    width: 41px;
+    height: 41px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    font-family: $font_lato;
+    font-weight: 500;
+    font-size: 16.4139px;
+    text-transform: uppercase;
+    color: #F1F3F9;
+    background: #006D84;
+    margin-right: 16px;
+  }
+  &__card-slide-name {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 140%;
+    color: #333333;
+  }
+  &__card-slide-status {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #BDBDBD;
+  }
+  &__card-slide-text {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #333333;
+    margin-bottom: 15px;
+  }
+  &__card-slide-btn {
+    @include link-button;
+  }
+  &__blog {
+    margin-top: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-bottom: 80px;
+  }
+  &__blog-item {
+    position: relative;
+    height: 325px;
+  }
+  &__blog-img {
+    display: block;
+    width: 100%;
+    height: 190px;
+
+  }
+  &__blog-body {
+    background: #FFFFFF;
+    box-shadow: 3px 4px 25px rgba(0, 0, 0, 0.07);
+    border-radius: 8px;
+    padding: 20px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+   
+  }
+  &__blog-title {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    color: $main_blue;
+    margin-bottom: 12px;
+  }
+  &__blog-text {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #939393;
+    margin-bottom: 15px;
+  }
+  &__blog-footer {
+    font-family: $font_lato;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+    color: $main_blue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &__blog-date {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #6F6F6F;
   }
 }
